# magic-mirror

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.js  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
public/: config.json  index.html
src/: App.svelte  App.vue  main.js  store.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.prod.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: config.json
src-tauri/src/: calendar.rs  commands.rs  config.rs  lib.rs  main.rs
src/assets/css/: main.css
src/assets/fonts/: roboto.css
src/components/: Calendar.vue  Clock.vue  Weather.vue  WeatherForecast.vue
src/lib/: store.js
src/lib/components/: Calendar.svelte  Clock.svelte  Weather.svelte  WeatherForecast.svelte
src/store/: index.js
