[package]
name = "magic-mirror-app"
version = "2.0.0"
description = "A Tauri App for a Magic Mirror"
authors = ["stabbert"]
license = "MIT"
repository = "https://github.com/stabbert/magic-mirror"
default-run = "magic-mirror-app"
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", default-features = false, features = ["compression", "wry"] }
tauri-plugin-http = "2.5.0"
tauri-plugin-fs = "2.4.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.car
strip = true # Ensures debug symbols are removed.
